# ai-agent-deck

./: .gitignore  README.md
AndroidApp/: local.properties  (+1 more)
Manager/: AI_Deck_Manager.spec  CRASH_HANDLER.md  FLASH_GUIDE.md  LICENSE  README.md  ai_deck_gui.py  ai_deck_manager.py  build.bat  build_exe.bat  config.json  device_manager.py  flash.bat  flash.py  main.py  profile_manager.py  pyproject.toml  requirements.txt  run_app.py  setup_wifi.py  start.bat  test_ble.py  test_crash_handler.py  test_flash_dialog.py  test_keys.py  test_profile_editor.py  test_workflow.py  window_detector.py  workflow_manager.py
Manager/app/: __init__.py  __main__.py  main.py  version.py
Manager/app/ai/: __init__.py  ai_manager.py
Manager/app/core/: __init__.py  device.py  engine.py  flash_manager.py  profile.py  wallpaper_manager.py  wifi_device.py  workflow.py
Manager/app/data/: __init__.py  analytics.py  data_pool.py
Manager/app/resources/: create_icon.py
Manager/app/ui/: __init__.py  about_dialog.py  flash_dialog.py  log_panel.py  main_window.py  modern_theme.py  modern_widgets.py  modern_window.py  profile_editor.py  setup_dialog.py  theme.py
Manager/app/utils/: __init__.py  crash_handler.py  logger.py  version.py
Manager/firmware/: version.json
Manager/gui/: PROFILE_EDITOR_README.md  __init__.py  app.py  main_window.py  profile_editor.py
Manager/installer/: build_installer.bat  setup.iss
Manager/profiles/: blender.json  chrome.json  default.json  kicad.json  vscode.json  word.json
Manager/scripts/: custom.bat  ocr.bat  open_claude.bat
Manager/themes/: dark.json  light.json  neon.json
(+61 files in other folders)
