[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-deck-manager"
version = "2.1.0"
description = "Context-Aware Workflow Controller for ESP32"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI Agent Deck Team"},
]
keywords = ["esp32", "workflow", "automation", "hid", "keyboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
]

dependencies = [
    "pywin32>=306",
    "psutil>=5.9.0",
    "pynput>=1.7.6",
    "bleak>=0.21.0",
    "PyQt5>=5.15.0",
    "Pillow>=10.0.0",
    "pyserial>=3.5",
    "esptool>=4.7.0",
]

[project.urls]
Homepage = "https://github.com/81823650800wzy-sketch/ai-agent-deck"
Repository = "https://github.com/81823650800wzy-sketch/ai-agent-deck"
Issues = "https://github.com/81823650800wzy-sketch/ai-agent-deck/issues"

[project.gui-scripts]
ai-deck-manager = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]
